--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@rocketseat/eslint-config": "1.2.0",
     "@types/node": "20.1.4",
+    "eslint": "8.40.0",
     "tsup": "6.7.0",
     "tsx": "3.12.7",
     "typescript": "5.0.4"
