chore: organization routes

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start:dev": "tsx watch src/server.ts",
+    "start": "node build/server.js",
     "build": "tsup src --out-dir build",
     "test": "vitest run",
     "test:watch": "vitest",
@@ -19,6 +21,7 @@
     "@types/node": "20.1.4",
     "eslint": "8.40.0",
     "prisma": "4.14.0",
+    "supertest": "6.3.3",
     "tsup": "6.7.0",
     "tsx": "3.12.7",
     "typescript": "5.0.4",
@@ -26,6 +29,8 @@
     "vitest": "0.31.0"
   },
   "dependencies": {
+    "@fastify/cookie": "8.3.0",
+    "@fastify/jwt": "6.7.1",
     "@prisma/client": "4.14.0",
     "bcryptjs": "2.4.3",
     "dotenv": "16.0.3",
