--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
 NODE_ENV=dev
+
+# Auth
+JWT_SECRET=find_a_frind
+
+# Database
+DATABASE_URL="postgresql://docker:docker@localhost:5432/findafriend?schema=public"
