--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "test:e2e": "vitest run --dir src/http",
+    "test": "vitest run --dir src/use-cases",
+    "test:watch": "vitest --dir src/use-cases",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
@@ -19,6 +23,7 @@
     "@rocketseat/eslint-config": "1.2.0",
     "@types/bcryptjs": "2.4.2",
     "@types/node": "20.1.4",
+    "@types/supertest": "2.0.12",
     "eslint": "8.40.0",
     "prisma": "4.14.0",
     "supertest": "6.3.3",
@@ -38,6 +43,7 @@
     "dotenv": "16.0.3",
     "fastify": "4.17.0",
     "fastify-multer": "2.0.3",
+    "npm-run-all": "4.1.5",
     "zod": "3.21.4"
   }
 }
